--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,11 @@ authors = ["ctrebbau <ctrebbau@pm.me> and contributors"]
 version = "0.1.0"
 
 [deps]
-Wrangle = "d68deb43-14e0-4e4c-9309-995745fd6c75"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "1"
